# Saternal

./: .env.example  .gitignore  Architecture.md  CURRENT_STATE.md  Cargo.toml  PLAN.md  README.md  RENDERING_TODO.md  STATUS.md  STYLING_IMPLEMENTATION.md  bundle.sh  micro-interactions.md  run_debug.sh  test_ansi_styles.sh  things_to_improve.md
.claude/commands/: elon.md  rules.md
docs/: CURRENT_STATE.md  CURSOR_VISIBILITY_FIX_PROPOSAL.md  ELON_METHODOLOGY_REFACTOR.md  FONT_SCALING_PROPOSAL.md  GPU_BLUR_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  KEYBOARD_TESTING.md  LLM_COMMAND_CORRECTION_PROPOSAL.md  NATURAL_LANGUAGE_COMMANDS.md  NL_COMMANDS_SUMMARY.md  NL_COMMANDS_UI_UX_PROPOSAL.md  PARALLEL_RENDERING.md  PTY_TERMINAL_STYLING_ESSENTIALS.md  SCROLL_GESTURE_REFERENCE.md  SELECTION_ACCURACY_FIX_PROPOSAL.md  SPLITSCREEN_BORDERS.md  SPLIT_PANE_IMPLEMENTATION.md  SPLIT_PANE_PROPOSAL.md  SPLIT_PANE_VISUAL_DIFFERENTIATION.md  TERMINAL_INPUT_COMPLETE.md  TERMINAL_INPUT_REFERENCE.md  TERMINAL_RESIZING_FIX.md  UI_FLOWS.md  WALLPAPER_IMPLEMENTATION_COMPLETE.md  WALLPAPER_TRANSLUCENCY_PROPOSAL.md  WALLPAPER_TRANSPARENCY_DEBUG_SESSION.md  cursor-implementation-plan.md  cursor-monitor-positioning-fix.md  cursor-position-change.md  micro-interactions.md  terminal-ux-ui-research.md
saternal/: Cargo.toml  build.rs
saternal-core/: Cargo.toml
saternal-core/src/: command_safety.rs  config.rs  constants.rs  font.rs  geometry.rs  input.rs  lib.rs  llm_client.rs  nl_detector.rs  pane.rs  renderer.rs  renderer.rs.backup  terminal.rs
saternal-core/src/clipboard/: mod.rs  platform.rs
saternal-core/src/renderer/: blur.rs  borders.rs  color.rs  glyph_atlas.rs  glyph_renderer.rs  gpu.rs  mod.rs  opacity.rs  pipeline.rs  text_rasterizer.rs  texture.rs  theme.rs  ui_box.rs  wallpaper.rs
saternal-core/src/renderer/cursor/: config.rs  mod.rs  pipeline.rs  state.rs
saternal-core/src/search/: engine.rs  mod.rs  state.rs
saternal-core/src/selection/: mod.rs  range.rs  renderer.rs  smart.rs
saternal-core/src/shaders/: blur.wgsl  border.wgsl  cursor.wgsl  glyph.wgsl  selection.wgsl  text.wgsl
saternal-macos/: Cargo.toml
saternal-macos/src/: hotkey.rs  icon.rs  lib.rs  window.rs
saternal/resources/macos/: AppIcon.icns  Info.plist
saternal/src/: app.rs  main.rs  tab.rs
saternal/src/app/: clipboard.rs  commands.rs  event_loop.rs  init.rs  input.rs  mod.rs  mouse.rs  nl_handler.rs  state.rs  window.rs
src/app/: commands.rs
