[workspace]
members = [
    "saternal",
    "saternal-core",
    "saternal-macos",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Saternal Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/saternal"

[workspace.dependencies]
# Terminal core
alacritty_terminal = "0.25"
vte = "0.15"

# GPU rendering
wgpu = "0.19"
winit = "0.29"

# Font handling
fontdue = "0.9"
swash = "0.1"

# Platform-specific
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"

# Global hotkey
global-hotkey = "0.5"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
notify = "6.1"

# Utilities
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
bitflags = "2.4"
bytemuck = { version = "1.14", features = ["derive"] }

# Phase 2 dependencies
arboard = "3.3"  # Clipboard support
regex = "1.10"   # Smart selection patterns
rayon = "1.8"    # Parallel rendering

# Image loading
image = "0.25"   # Wallpaper support (PNG, JPG, WEBP)

# Natural language command generation
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0"
lru = "0.12"
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
