[package]
name = "saternal-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Terminal emulation
alacritty_terminal.workspace = true
vte.workspace = true

# Font rendering
fontdue.workspace = true
swash.workspace = true

# GPU rendering
wgpu.workspace = true
winit.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Utilities
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
bitflags.workspace = true
serde.workspace = true
toml.workspace = true
bytemuck.workspace = true

# Phase 2 features
arboard.workspace = true
regex.workspace = true

# Parallel rendering
rayon.workspace = true

# Image loading
image.workspace = true

# Natural language command generation
reqwest.workspace = true
serde_json.workspace = true
lru.workspace = true
