[package]
name = "saternal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "saternal"
path = "src/main.rs"

[dependencies]
saternal-core = { path = "../saternal-core" }
saternal-macos = { path = "../saternal-macos" }

# Window and rendering
winit.workspace = true
wgpu.workspace = true

# Global hotkey
global-hotkey.workspace = true

# Platform-specific
cocoa.workspace = true
objc.workspace = true
core-foundation.workspace = true
core-graphics.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Config
serde.workspace = true
toml.workspace = true
notify.workspace = true

# Utilities
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
