[package]
name = "saternal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "saternal"
path = "src/main.rs"

[package.metadata.bundle]
name = "Saternal"
identifier = "com.saternal.terminal"
version = "0.1.0"
copyright = "Copyright (c) 2024 Saternal Contributors"
category = "Developer Tool"
short_description = "A blazing-fast dropdown terminal emulator for macOS"
icon = ["resources/macos/AppIcon.icns"]
osx_minimum_system_version = "11.0"

[dependencies]
saternal-core = { path = "../saternal-core" }
saternal-macos = { path = "../saternal-macos" }

# Window and rendering
winit.workspace = true
wgpu.workspace = true

# Global hotkey
global-hotkey.workspace = true

# Platform-specific
cocoa.workspace = true
objc.workspace = true
core-foundation.workspace = true
core-graphics.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Config
serde.workspace = true
toml.workspace = true
notify.workspace = true

# Utilities
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
pollster = "0.3"
